# src/Controller/PagesController.php
@@ -51,6 +51,13 @@ final class PagesController extends AbstractController
  */
 
 /**
+ * @OA\Tag(
+ *     name="Questions",
+ *     description="Questions endpoints"
+ * )
+ */
+
+/**
  * @OA\SecurityScheme(
  *   securityScheme="OAuth2.0-Token",
  *   type="oauth2",
